--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,6 +1,6 @@
 version: 2
 updates:
   - package-ecosystem: 'pip'
-    directory: './bot'
+    directory: '/'
     schedule:
       interval: 'daily'
